// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly run ExpensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Veiwing 
    23
     
    expenses
     Totalling 
    $2,351,234.56
  </h1>
</div>
`;

exports[`should correctly run ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Veiwing 
    1
     
    expense
     Totalling 
    $2.35
  </h1>
</div>
`;
